--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 <br>
 <br>
 <div id="rectangle" style="width:100%; height: 100px; background-color:#B2E6E2"> 
-    <div class="letters"> P R O J E C T S
+  <div style="text-align: center; font-size: 60px; color: white;"> <b> P r o j e c t s </b>
   </div></div>
     </div> 
   </div>
 
     <br>
-    <div style="float: left; padding-left: 30px;">
+    <div style="float: left; padding-left: 32px;">
       <img id="Wonder" src="Images/Image 1-woodlawn.png" width="720" height="462"> 
     </div>
     <div>
@@ -129,19 +129,37 @@
 </div>
       </p>
     </div>
-    <div style="float: right; padding-right: 40px; margin: 5px;">
+    <div style="float: right; padding-right: 46px; margin: 1px;">
       <img id="Echo" src="Images/Echo-image 2.png" width="720" height="462">
       </div>
       <div>
-        </div><h1> Echo Concerts & Events</h1>
+        </div><br>
+        <br> <h1> <div style="text-align: center; padding-right: 830px;"> Echo Concerts & Events </h1> </div>
         <br>
-        <br>
-        <br> 
-        <br>
-        <span style="font-size: 24px"> Echo is a concert event tracking application that aims to streamline the concert planning experience by providing concertgoers with favorite artists, venue information, and transparent pricing details. 
+        <span style="font-size: 24px"><div style="padding-right: 900px; margin: 1px; padding-left: 100px; text-align:justify"> Echo is a concert event tracking application that aims to streamline the concert planning experience by providing concertgoers with favorite artists, venue information, and transparent pricing details. 
  
 
         </span> 
       </div> 
     
     </div> 
+
+    <div style="float: left; padding-left: 32px;">
+      <img id="DOI" src="Images/DOI-Image 3.png" width="720" height="462"> 
+      </div>
+      <div>
+      </div>
+      <br>
+      <br>
+      <br> <h1><div style="text-align: center; padding-left: 850px; margin: 10px; padding-right: 150px; padding-top: 30px;">The Department of the Interior Website Redesign</h1> </div> 
+      <br>
+      <span style="font-size: 24px"><div style="padding-left: 800px; margin: 1px; padding-right: 150px; text-align:justify"> The DOI website has proven to be difficult to navigate and is outdated. The project aimed to improve the site's overall usability and make information more accessible.  </span> </div>
+
+      <div style="float: right; padding-right: 46px; margin: 1px;">
+        <img id="Nomad" src="Images/Nomad-image 4.png" width="720" height="462">
+        </div></div>
+        <br> 
+        <br><h1> <div style="text-align: center; padding-right: 830px; padding-top: 100px;"> Nomad </h1> </div>
+        <br>
+        <span style="font-size: 24px"><div style="padding-right: 900px; margin: 1px; padding-left: 100px; text-align:justify"> Nomad is a user-friendly travel companion that aims to create a platform where anyone can plan a trip or vacation completely hassle free. </div></span> 
+ 
