--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <link href="product.css" rel="stylesheet">
   </head>
   <body>
+   scroll-behavior: smooth;
     
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
@@ -164,3 +165,4 @@
         <br>
         <span style="font-size: 24px"><div style="padding-right: 900px; margin: 1px; padding-left: 100px; text-align:justify"> Nomad is a user-friendly travel companion that aims to create a platform where anyone can plan a trip or vacation completely hassle free. </div></span> 
  
+     =
