--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </header>
 
 <main>
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-white"> <div class="hero"> <img src="Images/image 146portfoliobanner.png">
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-white"> <div class="hero"> <img src="Images/image 146portfoliobanner.png"> 
 <br>
 <br>
 <br>
@@ -108,15 +108,16 @@
 <br>
 <br>
 <div id="rectangle" style="width:100%; height: 100px; background-color:#B2E6E2"> 
-  <div style="text-align: center; font-size: 60px; color: white;"> <b> P r o j e c t s </b>
+  <div style="text-align; center; font-size: 60px; color: white;"> <b> P r o j e c t s </b>
   </div></div>
     </div> 
   </div>
 
     <br>
-    <div style="float: left; padding-left: 32px;">
+    <div style="float: left; padding-left: 32px;"> 
       <img id="Wonder" src="Images/Image 1-woodlawn.png" width="720" height="462"> 
     </div>
+    
     <div>
       <h1><div style="text-align: center; padding-left: 800px; margin: 1px; padding-right: 150px">The Woodland Theatre Website Redesign</h1> </div> 
       <br>
