--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
     <a class="py-2 d-none d-md-inline-block" href="#"></a>
     <a class="py-2 d-none d-md-inline-block" href="#"></a>
     <a class="py-2 d-none d-md-inline-block" href="#">About Me</a>
-    <a class="py-2 d-none d-md-inline-block" href="#">Portfolio</a>
+    <a class="py-2 d-none d-md-inline-block" href="https://delilahyquezada.github.io/UX_UI__HW_20/">Portfolio</a>
     <a class="py-2 d-none d-md-inline-block" href="#">Resume</a>
     <a class="py-2 d-none d-md-inline-block" href="#">Contact</a>
   </nav>
 
 <main>
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-white"> <div class="hero"> <img src="Images/image 146portfoliobanner.png"> 
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-white"> <div class="hero"> <img src="Images/image 146portfoliobanner.png" class="img-fluid"> 
 <br>
 <br>
 <br>
@@ -119,7 +119,7 @@
 
     <br>
     <div style="float: left; padding-left: 32px;"> 
-      <img id="Wonder" src="Images/Image 1-woodlawn.png" width="720" height="462"> 
+      <img id="Wonder" src="Images/Image 1-woodlawn.png" width="720" height="462" class="img-fluid"> 
     </div>
     
     <div>
@@ -137,7 +137,7 @@
       </p>
     </div>
     <div style="float: right; padding-right: 46px; margin: 1px;">
-      <img id="Echo" src="Images/Echo-image 2.png" width="720" height="462">
+      <img id="Echo" src="Images/Echo-image 2.png" width="720" height="462" class="img-fluid">
       </div>
       <div>
         </div><br>
@@ -152,7 +152,7 @@
     </div> 
 
     <div style="float: left; padding-left: 32px;">
-      <img id="DOI" src="Images/DOI-Image 3.png" width="720" height="462"> 
+      <img id="DOI" src="Images/DOI-Image 3.png" width="720" height="462" class="img-fluid"> 
       </div>
       <div>
       </div>
@@ -163,7 +163,7 @@
       <span style="font-size: 24px"><div style="padding-left: 800px; margin: 1px; padding-right: 150px; text-align:justify"> The DOI website has proven to be difficult to navigate and is outdated. The project aimed to improve the site's overall usability and make information more accessible.  </span> </div>
 
       <div style="float: right; padding-right: 46px; margin: 1px;">
-        <img id="Nomad" src="Images/Nomad-image 4.png" width="720" height="462">
+        <img id="Nomad" src="Images/Nomad-image 4.png" width="720" height="462" class="img-fluid">
         </div></div>
         <br> 
         <br><h1> <div style="text-align: center; padding-right: 830px; padding-top: 100px;"> Nomad </h1> </div>
