--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <a class="py-2 d-none d-md-inline-block" href="#"></a>
     <a class="py-2 d-none d-md-inline-block" href="#"></a>
     <a class="py-2 d-none d-md-inline-block" href="#">About Me</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://delilahyquezada.github.io/UX_UI__HW_20/">Portfolio</a>
+    <a class="py-2 d-none d-md-inline-block" href="https://delilahyquezada.github.io/UX_UI_HW_20/">Portfolio</a>
     <a class="py-2 d-none d-md-inline-block" href="#">Resume</a>
     <a class="py-2 d-none d-md-inline-block" href="#">Contact</a>
   </nav>
